<resources>
    <string name="app_name">Switch Transfer Tool</string>
    <string name="settings">Settings</string>
    <string name="main_download">Transfer from Switch</string>
    <string name="main_gallery">View Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_empty_header">There\'s nothing here yet</string>
    <string name="gallery_empty_desc">Transfer some images or videos from your Switch to get started</string>
    <string name="invalid_qr_scan">That doesn\'t look right. Please scan the Step 1 barcode on your Switch.</string>
    <string name="awaiting_connection">Waiting to be connected…</string>
    <string name="awaiting_connection_desc">Press the button below or go to your device\'s WiFi settings and connect to the network listed on your Switch. Press the help button above for more information.</string>
    <string name="connecting">Connecting to Switch…</string>
    <string name="downloading">Downloading Media…</string>
    <string name="downloaded_single_image">Image Downloaded</string>
    <string name="downloaded_multiple_images">Images Downloaded</string>
    <string name="downloaded_multiple_images_number">%1$d Images Downloaded</string>
    <string name="downloaded_video">Video Downloaded</string>
    <string name="download_complete_desc">Your files will be visible in this app as well as your gallery app. Press below to return to the gallery</string>
    <string name="connection_failure_title">Connection Problem</string>
    <string name="connection_failure_desc">There was an issue connecting to your Switch. This is probably due to a known Android bug.\n\nFully restarting the app (remove from recents list) or using manual mode (wifi cog icon on scanning screen) typically resolves the issue.</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="lost_connection_desc">Lost connection to your console. Make sure your console has not entered sleep mode and try connecting again.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_error_desc">An unknown error has occurred. Make sure your console has not gone to sleep and try connecting again.</string>
    <string name="more_info">More Info</string>
    <string name="okay">Okay</string>
    <string name="help">Help</string>
    <string name="return_home">Return to Gallery</string>
    <string name="open_wifi_settings">Open WiFi Settings</string>
    <string name="delete_error_msg">Unable to delete image. Try again or use your device\'s gallery/file manager.</string>
    <string name="whats_new_title">What\'s New</string>

    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="open_external">Open With…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_body">Are you sure you want to delete this file?</string>
    <string name="nope">Nope</string>
    <string name="yes_sure">Yes, I\'m sure</string>
    <string name="go_back">Go Back</string>
    <string name="error">Error</string>

    <string name="seconds_abbr">%1$ds</string>

    <!-- Preferences -->
    <string name="gallery_prefs_section">Gallery Preferences</string>
    <string name="about_prefs_section">About Switch Transfer Tool</string>
    <string name="theme_title">Theme</string>
    <string name="theme_auto">Match System Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="sortorder_title">Gallery Sort Direction</string>
    <string name="capture_date_title">Sort by Transfer Date</string>
    <string name="capture_date_summary_off">Order by the date the media was taken</string>
    <string name="capture_date_summary_on">Order by the date the media was transferred</string>
    <string name="default_manual_mode">Default to Manual Connection</string>
    <string name="default_manual_mode_summary_off">QR Scanning Mode is default</string>
    <string name="default_manual_mode_summary_on">Manual Mode is default</string>
    <string name="show_qr_tutorial">Show QR Tutorial</string>
    <string name="show_manual_tutorial">Show Manual Tutorial</string>
    <string name="show_tutorial_summary_off">Tutorial will not be shown</string>
    <string name="show_tutorial_summary_on">Tutorial will be shown every time</string>
    <string name="source_title">Source Code</string>
    <string name="source_summary">SwitchTransferTool on Github</string>
    <string name="oss_licenses_title">Open Source Licences</string>
    <string name="app_version_title">App Version</string>
    <string name="icons_credit">Logo and Illustrations by Jesse Ramey</string>
    <string name="non_affiliation_disclaimer">Neither this app nor its developer are affiliated, associated, authorized, endorsed by, or in any way officially connected with Nintendo Co., Ltd or its subsidiaries.\n\nAll product and company names are the registered trademarks of their original owners. The use of any trademark is for identification and reference purposes only and does not imply any association with the trademark holder.</string>
    <string name="disclaimer_title">Disclaimer</string>

    <!-- Tutorial -->
    <string name="tut_skip">Skip</string>
    <string name="tut_next">Next</string>
    <string name="tut_end">Get Started</string>
    <string name="wifi_tut_title">QR Code Scanning</string>
    <string name="wifi_tut_body1">Open the album on the Home menu and select a photo or video to transfer</string>
    <string name="wifi_tut_body2">Press A and choose "Send to Smartphone". If you have selected a photo, you can choose "Send a Batch" to send multiple photos at once.</string>
    <string name="wifi_tut_body3">On the next screen, scan the QR code on the left side of the Switch\'s screen. Switch Transfer tool will handle the rest!</string>
    <string name="wifi_tut_finish">Get Started</string>
    <string name="manual_tut_title">Manual Connection</string>
    <string name="manual_tut_location">In order to detect when you\'ve connected to your Switch, you will need to grant location access. We do not collect your physical location.</string>
    <string name="manual_tut_body1">Open the album on the Home menu and select a photo or video to transfer</string>
    <string name="manual_tut_body2">Press A and choose "Send to Smartphone". If you have selected a photo, you can choose "Send a Batch" to send multiple photos at once.</string>
    <string name="manual_tut_body3">On the next screen, press "Trouble connecting"</string>
    <string name="manual_tut_body4">After this tutorial, connect to the network listed on the Switch. If the network is saved, long-press it and choose modify, as the password changes each time you transfer.</string>
    <string name="manual_tut_body5">If you get a notification that the network has no internet access, choose to stay connected. Then return to this app and Switch Transfer tool will handle the rest!</string>

    <!-- Permissions -->
    <string name="permission_required">Permission Required</string>
    <string name="location_rationale">Location access is required in order to connect manually. Without it, we cannot tell when you\'ve connected to your Switch</string>
    <string name="location_permission_denied">Without location access, we are unable to detect your Switch.</string>

    <!-- Notification Channels -->
    <string name="manual_connection_notification_channel_name">Connection Notification</string>
    <string name="manual_connection_notification_channel_description">Appears when a manual connection has succeeded if you\'re not in the app</string>

    <!-- Notifications -->
    <string name="switch_wifi_awaiting_connection_title">Checking for Switch…</string>
    <string name="switch_wifi_connected_title">Connected to Switch</string>
    <string name="switch_wifi_connected_body">Tap here to return to the app</string>

    <!-- Scanner -->
    <string name="manual_mode_button">Connect Manually</string>
</resources>