<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ca.codefusion.switchtransfertool.ui.transfer.downloader.DownloadingViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.transfer.downloader.DownloadingFragment"
        tools:background="?attr/background">

        <ImageButton
            android:id="@+id/scan_mode"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="@id/help"
            app:layout_constraintEnd_toStartOf="@id/help"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_qr_scan"
            android:visibility="@{ viewModel.state == viewModel.AWAITING_SSID ? View.VISIBLE : View.GONE}"
            style="@style/SttTheme.Icon"
            android:contentDescription="@string/manual_mode_button"
            android:onClick="@{ (v) -> viewModel.onScanClicked() }"
            />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/help"
            android:scaleType="fitXY"
            style="@style/SttTheme.Icon"
            android:visibility="@{ viewModel.state == viewModel.AWAITING_SSID ? View.VISIBLE : View.GONE}"
            android:onClick="@{ (v) -> viewModel.onHelpClicked() }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/connection_loader"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/center_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:scaleX="5"
            android:scaleY="5"
            app:lottie_rawRes="@raw/loader" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxHeight="500dp"
            android:src="@drawable/ic_image"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/center_guide"
            app:layout_constraintStart_toStartOf="@id/left_margin"
            app:layout_constraintEnd_toEndOf="@id/right_margin"
            tools:visibility="visible"
            tools:src="@drawable/ic_phone_error"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            style="@style/SttTheme.ConnectingLabel"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/right_margin"
            app:layout_constraintStart_toStartOf="@id/left_margin"
            app:layout_constraintTop_toBottomOf="@id/center_guide"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            style="@style/SttTheme.BodyText"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/left_margin"
            app:layout_constraintEnd_toEndOf="@id/right_margin"
            tools:visibility="visible"
            tools:text="@string/connection_failure_desc"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <TextView
            android:id="@+id/wifi_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/SttTheme.BodyText"
            android:onClick="@{ (v) -> viewModel.wifiSettingsClick() }"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintStart_toStartOf="@id/left_margin"
            app:layout_constraintEnd_toEndOf="@id/right_margin"
            android:text="@string/open_wifi_settings"/>

        <TextView
            android:id="@+id/more_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/SttTheme.BodyText"
            android:onClick="@{ (v) -> viewModel.moreInfoClick() }"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintStart_toStartOf="@id/left_margin"
            app:layout_constraintEnd_toEndOf="@id/right_margin"
            android:text="@string/more_info"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/slideActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SttTheme.OutlineButton"
            android:letterSpacing="0"
            android:paddingHorizontal="64dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="36dp"
            android:text="@string/return_home"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:onClick="@{ (v) -> viewModel.galleryButtonClick() }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>