<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ca.codefusion.switchtransfertool.ui.transfer.scanner.ScannerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        tools:context=".ui.transfer.scanner.ScannerFragment">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewfinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/switch_dark_grey" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            android:onClick="@{(v) -> viewModel.onBackButtonPressed() }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/manual_mode"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="@id/help"
            app:layout_constraintEnd_toStartOf="@id/help"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_wifi_cog"
            android:onClick="@{(v) -> viewModel.onManualButtonPressed() }"
            android:contentDescription="@string/manual_mode_button"
        />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/help"
            android:onClick="@{(v) -> viewModel.onHelpPressed() }"
            android:scaleType="fitXY"
            android:src="@drawable/ic_help"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>